     a unit attack definition
   * Micro AIs: add a warning and avoid crash when a non-existing side is used
     in the [micro_ai] tag
 * Editor:
   * Fixed stack corruption bug in the Side Setup dialog.
 * Language and i18n:
   * Updated translations: Scottish Gaelic
 * Multiplayer:
   * Removed the Silver Mage from the available leaders for the Rebels faction
     in Age of Heroes.
 * User interface:
   * Fixed minimap buttons appearing without contents or in the wrong state
     during WML start events until they are interacted with or control is given
     to the player for the first time or some other unspecified thing happens.
   * Hide mod options from the user command prompt dialog in the MP lobby when
     not authenticated as a mod.
   * Fixed unit bars, ellipses, and orbs disappearing for individual units in
     replay mode when using Skip Animations/Quick Replays if they moved without
     attacking or otherwise switching to a new animation.
   * Chat Log dialog now starts on the last log page when there are multiple
     pages.
 * Miscellaneous and bug fixes:
   * Fixed bug #23445: set default build type in cmake to "Release" to ensure
     that the game is not unoptimized
   * Made the file chooser dialog (used for e.g. loading maps in the editor)
     use uniform path delimiters on Windows, fixing issues with browsing to
     parent directories (bug #23224).
   * Made silence.ogg larger to work around a crash involving the multiplayer
     lobby with music and sound enabled (bug #23633, possibly also bug #23599,
     bug #23203, bug #23026).

Version 1.12.2:
 * Security fixes:
   * Fixed arbitrary file read by WML/Lua API (CVE-2015-0844, bug #23440).
 * AI:
   * Bottleneck Micro AI: bug fix for case when allied units are present
   * Forest Animals Micro AI: bug fix for wander terrain lying on border hexes
   * Herding Micro AI: bug fix for dogs sometimes having moves left at end
 * Campaigns: