@@ -11,6 +11,9 @@ Version 1.12.2+dev:
  * Multiplayer:
    * Removed the Silver Mage from the available leaders for the Rebels faction
      in Age of Heroes.
+   * Fixed "Accept whispers from friends only" not working with the default
+     lobby UI, and added a warning every 5 minutes for individual rejected
+     senders.
  * User interface:
    * Fixed minimap buttons appearing without contents or in the wrong state
      during WML start events until they are interacted with or control is given
